appId: ${APP_ID}
---
- tapOn:
    id: "loginUsername"
- eraseText
- tapOn:
    id: "loginPassword"
- eraseText

